[package]
name = "stm32l433love"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0", features = ["defmt"] }
embassy-executor = { version = "0",  features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0" }
embassy-stm32 = { version = "0", features =  ["nightly", "defmt", "unstable-pac", "stm32l433rc", "time-driver-any", "exti", "unstable-traits"]   }

defmt = "0"
defmt-rtt = "0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = { version = "=0.2.0-alpha.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }

micromath = "2.0.0"
usb-device = "0.2"
usbd-serial = "0.1.1"


[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "5b65b0e84377338b615ba3fc16d0a96d2db5c206"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "5b65b0e84377338b615ba3fc16d0a96d2db5c206"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "5b65b0e84377338b615ba3fc16d0a96d2db5c206"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "5b65b0e84377338b615ba3fc16d0a96d2db5c206"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "5b65b0e84377338b615ba3fc16d0a96d2db5c206"}